test/error/StringInterpolatedArgUnknownMethod.fu
public static class Test
{
    public static string() GetMessage(string str) => $"First character: {CharToString(str[0])}"; //ERROR: 'CharToString' not found

    public static void Run()
	{
        Console.WriteLine(GetMessage("Hi"));
    }
}
